--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -28,7 +28,7 @@ jobs:
         run: node --run test
 
   # Node version before 22.x does not support the node --run command, so we need to use the pnpm command instead.
-  build-legacy:
+  build-node-20:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛬
