--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "npm": ">=9.0.0",
     "pnpm": ">=9.x"
   },
+  "packageManager": "pnpm@9.14.2",
   "type": "module",
   "scripts": {
     "dev": "nodemon",
